# squeezeCNN

./: .clang-format  CMakeCache.txt  CMakeLists.txt  Documentation.md  Makefile  README.md  classifier.py  cmake_install.cmake  face_extraction.cpp  face_extraction.hpp  gitlabpti  gitlabpti.pub  mainAlgo.cpp  nohup.out  readme.md  squeezeCNN.cbp  squeezecnn  time  training_generator.hpp  utils.cpp  utils.hpp
aligned-images/: cache.t7
generated-embeddings/: classifier.pkl  labels.csv  reps.csv
network/: activation.h  core_math.h  layer.h  network.h  utils.h
src/: classifier.py  face_extraction.cpp  face_extraction.hpp  face_tracking.cpp  face_tracking.hpp  mainAlgo.cpp  network_utils.cpp  network_utils.hpp  training_generator.cpp  training_generator.hpp  utils.cpp  utils.hpp  video_consumer.cpp  video_consumer.hpp
